css/style.css
@charset "UTF-8";

#header {
  position: fixed;
  width: 100%;
  background: white;
  opacity: .9;
  z-index: 10000;
}

#footer {
  width: 100%;
  background: white;
  opacity: .9;
  padding: 1.5em;
}

#header .navbar-expand {
  justify-content: space-between;
}

#header a {
  color: black;
}

#intro {
  background-image: url('../images/overlay.png'), url('../images/intro.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 50% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  padding: 10em 0em;
  color: white;
}

#proposal_story {
  background-image: url('../images/overlay.png'), url('../images/shirleyheights.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 10% 0%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
}

#countdown_timer {
  background-image: url('../images/overlay.png'), url('../images/hands.jpg');
  background-repeat: repeat, no-repeat;
  background-position: 0%, 40% 70%;
  background-attachment: fixed, fixed;
  background-size: 256px 256px, cover;
  color: white;
}

#countdown_clock {
  padding: 3em 1em;
  font-size: 2.5em;
}

@media screen and (min-width: 425px) {
  #proposal_story {
    padding: 7.5em 2em;
  }
  #countdown_clock {
    padding: 7.5em 2em;
  }
}

@media screen and (min-width: 1024px) {
    #proposal_story {
      padding: 10em 15em;
    }
    .story {
        padding: 1em 5em;
    }
}

#intro .names span {
    font-size: 2em;
}

.monospace {
   font-family: 'Source Code Pro', monospace;
}

.cursive {
  font-family: 'Dancing Script', cursive;
}

.her_writing {
  font-family: 'Indie Flower', cursive;
}

.his_writing {
  font-family: 'Handlee', cursive;
}

#top_button {
  position: fixed;
  right: 1em;
  bottom: 2em;
  text-align: center;
  border-radius: 100%;
  opacity: .35;
  padding: 9px 14px;
}

#top_button:hover {
  opacity: .85;
}

.no_link, .no_link:hover {
  color: white;
}

.story {
  padding: 1em;
  background-color: rgba(0,0,0,.5);
}

.story h2 {
  font-size: 1.25em;
}

#canvas {
  margin-top: 3.5em;
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

